--- a/stopwatch-jps/index.html
+++ b/stopwatch-jps/index.html
@@ -80,7 +80,8 @@
             </div>
         </div>
     </div>
-    
-	<script src="script.js"></script>
+    <script src="script.js"></script>
+    <script src="stopwatch.js"></script>
+    <script src="countdown.js"></script>
 </body>
 </html>
